Fix return statement